force-app/main/default/objects/Engagement_Counterparty__c/Engagement_Counterparty__c.object-meta.xml
<CustomObject>
    <description>Custom object to track firms listed as counterparties for engaged deals/projects.</description>
    <label>Engagement Counterparty</label>
    <nameField>
        <label>Counterparty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Counterparties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>