force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Closing_Change_From_Prelim__c.field-meta.xml
<CustomField>
    <fullName>Bid_Closing_Change_From_Prelim__c</fullName>
    <formula>Bid_Closing_MP__c /  Bid_First_MP__c - 1.0</formula>
    <label>Bid Closing Change From Prelim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>