force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Closing_Max__c.field-meta.xml
<CustomField>
    <fullName>Bid_Closing_Max__c</fullName>
    <description>Calculated</description>
    <label>Bid Closing Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>