force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Closing_MP__c.field-meta.xml
<CustomField>
    <fullName>Bid_Closing_MP__c</fullName>
    <formula>( Bid_Closing_Min__c +  Bid_Closing_Max__c ) / 2</formula>
    <label>Bid Closing MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>