force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Closing_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Bid_Closing_Multiple__c</fullName>
    <formula>(Bid_Final_MP__c /  Financial_Final_EBITDA_LTM__c) - ( Bid_First_MP__c / Financial_First_EBITDA_LTM__c)</formula>
    <label>Bid Closing Multiple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>