force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Final_EBITDA_FYE__c.field-meta.xml
<CustomField>
    <fullName>Bid_Final_EBITDA_FYE__c</fullName>
    <formula>Bid_Final_MP__c /  Financial_Final_EBITDA_FYE__c</formula>
    <label>Bid Final EBITDA FYE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>