force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Final_EBITDA_LTM__c.field-meta.xml
<CustomField>
    <fullName>Bid_Final_EBITDA_LTM__c</fullName>
    <formula>Bid_Final_MP__c /  Financial_Final_EBITDA_LTM__c</formula>
    <label>Bid Final EBITDA LTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>