force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_Final_MP__c.field-meta.xml
<CustomField>
    <fullName>Bid_Final_MP__c</fullName>
    <formula>( Bid_Final_Min__c +  Bid_Final_Max__c ) / 2</formula>
    <label>Bid Final MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>