force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_First_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Bid_First_Book_Value__c</fullName>
    <formula>Bid_First_MP__c / Engagement__r.Book_Value__c</formula>
    <label>Bid First Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>