force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_First_EBITDA_LTM__c.field-meta.xml
<CustomField>
    <fullName>Bid_First_EBITDA_LTM__c</fullName>
    <formula>Bid_First_MP__c / Financial_First_EBITDA_LTM__c</formula>
    <label>Bid First EBITDA LTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>