force-app/main/default/objects/Engagement_Counterparty__c/fields/Bid_First_MP__c.field-meta.xml
<CustomField>
    <fullName>Bid_First_MP__c</fullName>
    <formula>(Bid_First_Min__c +  Bid_First_Max__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid First MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>