force-app/main/default/objects/Engagement_Counterparty__c/fields/Book_Returned__c.field-meta.xml
<CustomField>
    <fullName>Book_Returned__c</fullName>
    <label>Book Returned</label>
    <type>Date</type>
</CustomField>