force-app/main/default/objects/Engagement_Counterparty__c/fields/CapIQ_Id__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_Id__c</fullName>
    <formula>CASESAFEID(Company__r.CapIQ_Company__c)</formula>
    <label>CapIQ Id</label>
    <type>Text</type>
</CustomField>