force-app/main/default/objects/Engagement_Counterparty__c/fields/Client_Industry__c.field-meta.xml
<CustomField>
    <fullName>Client_Industry__c</fullName>
    <formula>TEXT(Engagement__r.Client__r.Industry_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Industry</label>
    <type>Text</type>
</CustomField>