force-app/main/default/objects/Engagement_Counterparty__c/fields/Cloned_Counteparty_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Counteparty_Id__c</fullName>
    <label>Cloned Counteparty Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>