force-app/main/default/objects/Engagement_Counterparty__c/fields/Closing_Round_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Round_Bid_Date__c</fullName>
    <label>Closing Round Bid Date</label>
    <type>Date</type>
</CustomField>