force-app/main/default/objects/Engagement_Counterparty__c/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <formula>Company__r.BillingCountry</formula>
    <label>Company Country</label>
    <type>Text</type>
</CustomField>