force-app/main/default/objects/Engagement_Counterparty__c/fields/Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement__c</fullName>
    <label>Sent CA</label>
    <type>Date</type>
</CustomField>