force-app/main/default/objects/Engagement_Counterparty__c/fields/Contacted_by_prior_Arranger__c.field-meta.xml
<CustomField>
    <fullName>Contacted_by_prior_Arranger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted by prior Arranger</label>
    <type>Checkbox</type>
</CustomField>