force-app/main/default/objects/Engagement_Counterparty__c/fields/Contacted_by_prior_Arranger_Text__c.field-meta.xml
<CustomField>
    <fullName>Contacted_by_prior_Arranger_Text__c</fullName>
    <formula>IF( Contacted_by_prior_Arranger__c , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <label>Contacted by prior Arranger Text</label>
    <type>Text</type>
</CustomField>