force-app/main/default/objects/Engagement_Counterparty__c/fields/Coverage_Officer__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Officer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>HL Employees only.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Counterparties</relationshipLabel>
    <relationshipName>Engagement_Counterparties</relationshipName>
    <type>Lookup</type>
</CustomField>