force-app/main/default/objects/Engagement_Counterparty__c/fields/Coverage_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer_Name__c</fullName>
    <formula>Coverage_Officer__r.Contact_Full_Name__c</formula>
    <label>Coverage Officer Name</label>
    <type>Text</type>
</CustomField>