force-app/main/default/objects/Engagement_Counterparty__c/fields/Date_of_Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Status_Change__c</fullName>
    <label>Date of Last Status Change</label>
    <type>Date</type>
</CustomField>