force-app/main/default/objects/Engagement_Counterparty__c/fields/Declined_Passed__c.field-meta.xml
<CustomField>
    <fullName>Declined_Passed__c</fullName>
    <label>Declined / Passed</label>
    <type>Date</type>
</CustomField>