force-app/main/default/objects/Engagement_Counterparty__c/fields/Deferred_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Consideration__c</fullName>
    <inlineHelpText>Non-Contingent</inlineHelpText>
    <label>Deferred Consideration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>