force-app/main/default/objects/Engagement_Counterparty__c/fields/Due_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence__c</fullName>
    <label>Due Diligence</label>
    <type>Date</type>
</CustomField>