force-app/main/default/objects/Engagement_Counterparty__c/fields/E_Y_NRL_Executed__c.field-meta.xml
<CustomField>
    <fullName>E_Y_NRL_Executed__c</fullName>
    <label>E&amp;Y NRL Executed</label>
    <type>Date</type>
</CustomField>