force-app/main/default/objects/Engagement_Counterparty__c/fields/Engagement_Counterparty_Comment__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Counterparty_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>