force-app/main/default/objects/Engagement_Counterparty__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <formula>Engagement__r.Name</formula>
    <label>Engagement Name</label>
    <type>Text</type>
</CustomField>