force-app/main/default/objects/Engagement_Counterparty__c/fields/Engagement_Number__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number__c</fullName>
    <formula>Engagement__r.Engagement_Number__c</formula>
    <label>Engagement_Number</label>
    <type>Text</type>
</CustomField>