force-app/main/default/objects/Engagement_Counterparty__c/fields/Equity_Check_MM__c.field-meta.xml
<CustomField>
    <fullName>Equity_Check_MM__c</fullName>
    <label>Equity Check (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>