force-app/main/default/objects/Engagement_Counterparty__c/fields/Executed_Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Executed_Confidentiality_Agreement__c</fullName>
    <label>Executed CA</label>
    <type>Date</type>
</CustomField>