force-app/main/default/objects/Engagement_Counterparty__c/fields/Executed_Legal_NRL__c.field-meta.xml
<CustomField>
    <fullName>Executed_Legal_NRL__c</fullName>
    <label>Executed Legal NRL</label>
    <type>Date</type>
</CustomField>