force-app/main/default/objects/Engagement_Counterparty__c/fields/Executed_QoE_NRL__c.field-meta.xml
<CustomField>
    <fullName>Executed_QoE_NRL__c</fullName>
    <label>Executed QoE NRL</label>
    <type>Date</type>
</CustomField>