force-app/main/default/objects/Engagement_Counterparty__c/fields/Financial_First_EBITDA_FYE__c.field-meta.xml
<CustomField>
    <fullName>Financial_First_EBITDA_FYE__c</fullName>
    <formula>Engagement__r.Financial_First_EBITDA_FYE__c</formula>
    <label>Financial First EBITDA FYE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>