force-app/main/default/objects/Engagement_Counterparty__c/fields/Had_Diligence_Call__c.field-meta.xml
<CustomField>
    <fullName>Had_Diligence_Call__c</fullName>
    <label>Had Diligence Call</label>
    <type>Date</type>
</CustomField>