force-app/main/default/objects/Engagement_Counterparty__c/fields/Indicated_Interest_Amount_MM__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Interest_Amount_MM__c</fullName>
    <label>Indicated Interest Amount (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>