force-app/main/default/objects/Engagement_Counterparty__c/fields/Industry_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Industry_Report_Status__c</fullName>
    <label>Industry Report Status</label>
    <type>Date</type>
</CustomField>