force-app/main/default/objects/Engagement_Counterparty__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <formula>TEXT(Engagement__r.Job_Type__c)</formula>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>