force-app/main/default/objects/Engagement_Counterparty__c/fields/Joint_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Joint_Counterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Counterparty</label>
    <referenceTo>Engagement_Counterparty__c</referenceTo>
    <relationshipLabel>Joint Bidders</relationshipLabel>
    <relationshipName>Engagement_Counterparties</relationshipName>
    <type>Lookup</type>
</CustomField>