force-app/main/default/objects/Engagement_Counterparty__c/fields/Legacy_CS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CS_ID__c</fullName>
    <description>Used to store the legacy Buyer Account ID from Capital Source</description>
    <externalId>true</externalId>
    <label>Legacy CS ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>