force-app/main/default/objects/Engagement_Counterparty__c/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <formula>Engagement__r.PIPELINE_Line_of_Business__c</formula>
    <label>Line Of Business</label>
    <type>Text</type>
</CustomField>