force-app/main/default/objects/Engagement_Counterparty__c/fields/Management_Call_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Management_Call_Presentation__c</fullName>
    <label>Management Call / Presentation</label>
    <type>Date</type>
</CustomField>