force-app/main/default/objects/Engagement_Counterparty__c/fields/Markup_Sent__c.field-meta.xml
<CustomField>
    <fullName>Markup_Sent__c</fullName>
    <label>Markup Sent</label>
    <type>Date</type>
</CustomField>