force-app/main/default/objects/Engagement_Counterparty__c/fields/Maximum_Investment_MM__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Investment_MM__c</fullName>
    <label>Maximum Investment (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>