force-app/main/default/objects/Engagement_Counterparty__c/fields/Maximum_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Leverage__c</fullName>
    <label>Maximum Leverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>