force-app/main/default/objects/Engagement_Counterparty__c/fields/Met_With_Management__c.field-meta.xml
<CustomField>
    <fullName>Met_With_Management__c</fullName>
    <label>Met With Mgmt</label>
    <type>Date</type>
</CustomField>