force-app/main/default/objects/Engagement_Counterparty__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Confidentiality_Agreement__c</fullName>
                <label>Sent CA</label>
            </value>
            <value>
                <fullName>Sent_Teaser__c</fullName>
                <label>Sent Teaser</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>