force-app/main/default/objects/Engagement_Counterparty__c/fields/Negotiate_Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Negotiate_Confidentiality_Agreement__c</fullName>
    <label>Negotiate CA</label>
    <type>Date</type>
</CustomField>