force-app/main/default/objects/Engagement_Counterparty__c/fields/NRL_Status__c.field-meta.xml
<CustomField>
    <fullName>NRL_Status__c</fullName>
    <label>NRL Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>