force-app/main/default/objects/Engagement_Counterparty__c/fields/Opportunity_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Counterparty__c</fullName>
    <description>Used in conversion mapping</description>
    <label>Opportunity Counterparty</label>
    <length>18</length>
    <type>Text</type>
</CustomField>