force-app/main/default/objects/Engagement_Counterparty__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <description>Deprecated as of 8/xx/2019 with the releasee of the Engagement Summary Lightning App. Fields have been moved to Engagement_Summary__c object. Fields will remain intact for reporting purposes only.</description>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Bolt-On</fullName>
            </value>
            <value>
                <fullName>Strategic Add-On</fullName>
            </value>
            <value>
                <fullName>Product Extension</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>