force-app/main/default/objects/Engagement_Counterparty__c/fields/Primary_Calling_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Calling_Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Calling Responsibility</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>HL Employee required</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>012i0000000tEhe</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements as Main HL Contact</relationshipLabel>
    <relationshipName>Engagement_Counterparties1</relationshipName>
    <type>Lookup</type>
</CustomField>