force-app/main/default/objects/Engagement_Counterparty__c/fields/Process_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Process_Letter_Sent__c</fullName>
    <label>Process Letter Sent</label>
    <type>Date</type>
</CustomField>