force-app/main/default/objects/Engagement_Counterparty__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <description>Deprecated as of 8/xx/2019 with the releasee of the Engagement Summary Lightning App. Fields have been moved to Engagement_Summary__c object. Fields will remain intact for reporting purposes only.</description>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broad Auction</fullName>
            </value>
            <value>
                <fullName>Controlled Auction</fullName>
            </value>
            <value>
                <fullName>Targeted Negotiations (5 to 10 parties)</fullName>
            </value>
            <value>
                <fullName>Direct Negotiation</fullName>
            </value>
            <value>
                <fullName>DM&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>