force-app/main/default/objects/Engagement_Counterparty__c/fields/Proposal_Indication__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Indication__c</fullName>
    <label>Proposal/Indication</label>
    <type>Date</type>
</CustomField>