force-app/main/default/objects/Engagement_Counterparty__c/fields/QoE_Status__c.field-meta.xml
<CustomField>
    <fullName>QoE_Status__c</fullName>
    <description>QoE Status</description>
    <inlineHelpText>QoE Status</inlineHelpText>
    <label>QoE Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>