force-app/main/default/objects/Engagement_Counterparty__c/fields/Rationale_for_Buyer_Investor__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Buyer_Investor__c</fullName>
    <label>Rationale for Buyer/Investor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>